--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -146,6 +146,37 @@ body {
   background-color: #df4343;
   color: #ffffff;
 }
+.sensors-container {
+  margin-top: 20px;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.sensor-box {
+  width: 250px;
+  height: 250px;
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+h1 {
+  text-align: center;
+}
+
+.btns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btns button {
+  width: 100px;
+  margin: 5px;
+  height: 32px;
+  border: 2px solid black;
+}
 
 /* media queries */
 
