--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -106,6 +106,10 @@ button[type="submit"] {
   margin: 20px;
   width: 150px;
 }
+
+.data-container {
+  margin: 50px;
+}
 */
 /* .form input[type="text"],
 .form input[type="email"],
